--- a/templates/base.html
+++ b/templates/base.html
@@ -161,33 +161,19 @@
                         <a href="/devices/"><i class="fa fa-fw fa-bar-chart-o"></i> Devices</a>
                     </li>
                     <li>
-                        <a href="/tables/"><i class="fa fa-fw fa-table"></i> Tables</a>
+                        <a href="/tables/"><i class="fa fa-fw fa-table"></i> Isolation Control</a>
                     </li>
                     <li>
-                        <a href="forms.html"><i class="fa fa-fw fa-edit"></i> Forms</a>
+                        <a href="forms.html"><i class="fa fa-fw fa-edit"></i> Testing & Tagging</a>
                     </li>
                     <li>
-                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
+                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Business Logic</a>
                     </li>
                     <li>
                         <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
                     </li>
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo" class="collapse">
-                            <li>
-                                <a href="#">Dropdown Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
-                    <li>
-                        <a href="base-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
+                        <a href="base-rtl.html"><i class="fa fa-fw fa-dashboard"></i> Site Power</a>
                     </li>
                 </ul>
             </div>
@@ -195,91 +181,52 @@
         </nav>
 
         <div id="page-wrapper">
-
+			
             <div class="container-fluid">
-
+				
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Department Overview
+                            <i class="fa fa-building fa-lg"></i> Department Overview
                         </h1>
-                        <ol class="breadcrumb">
+                        <!-- ol class="breadcrumb">
                             <li class="active">
-                                <i class="fa fa-dashboard"></i> Departments
+                                Departments
                             </li>
-                        </ol>
+                        </ol> -->
                     </div>
                 </div>
                 <!-- /.row -->
-
+                
                 <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="panel panel-green">
+				{% for dept in dept_list %}
+					<div class="col-lg-3 col-md-6">
+						<div class="{{dept.color}}">
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
-                                        <i class="fa fa-tasks fa-5x"></i>
+                                        <i class="{{dept.icon}}"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">Crush Plant</div>
-                                        <div >18 devices</div>
+                                        <div class="huge">{{dept.name}}</div>
+                                        <div >{{dept.devcount}}</div>
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="{%url 'view-dept' dept.id %}">
                                 <div class="panel-footer">
-                                    <span class="pull-left"><a href="/viewdevice/?dept=1">View Devices</a></span>
+                                    <span class="pull-left"><a href="{%url 'view-dept' dept.id %}">View Devices</a></span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="panel panel-yellow">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-shopping-cart fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge">Rail</div>
-                                        <div >8 devices</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href="#">
-                                <div class="panel-footer">
-                                    <span class="pull-left"><a href="/viewdevice/?dept=2">View Devices</a></span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="panel panel-red">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-support fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge">Plant</div>
-                                        <div >14 devices</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href="#">
-                                <div class="panel-footer">
-                                    <span class="pull-left"><a href="/viewdevice/?dept=3">View Devices</a></span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
+				{% endfor %}
+                
+                                
+
                 </div>
                 <!-- /.row -->
 
