--- a/templates/base.html
+++ b/templates/base.html
@@ -105,33 +105,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-                    <ul class="dropdown-menu alert-dropdown">
-                        <li>
-                            <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">View All</a>
-                        </li>
-                    </ul>
-                </li>
+
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Luke Taylor <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -155,25 +129,23 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="base.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                    <li class="active">
+                        <a href="base.html"><i class="fa fa-fw fa-desktop"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="/devices/"><i class="fa fa-fw fa-bar-chart-o"></i> Devices</a>
+                        <a href="/devices/"><i class="fa fa-fw fa fa-plug"></i> Devices</a>
                     </li>
                     <li>
-                        <a href="/tables/"><i class="fa fa-fw fa-table"></i> Isolation Control</a>
+                        <a href="/tables/"><i class="fa fa-fw fa-lock"></i> Isolation Control</a>
                     </li>
                     <li>
-                        <a href="forms.html"><i class="fa fa-fw fa-edit"></i> Testing & Tagging</a>
+                        <a href="forms.html"><i class="fa fa-fw fa-tags"></i> Testing & Tagging</a>
                     </li>
                     <li>
-                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Business Logic</a>
+                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-bar-chart-o"></i> Business Logic</a>
                     </li>
                     <li>
-                        <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
-                    </li>
-                    <li>
-                        <a href="base-rtl.html"><i class="fa fa-fw fa-dashboard"></i> Site Power</a>
+                        <a href="bootstrap-grid.html"><i class="fa fa-fw fa-heart-o"></i> Site Power</a>
                     </li>
                 </ul>
             </div>
